--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "dc833035-4b18-41f3-ef1f-23596b3f3ba3"
+        "outputId": "4262b31c-40c0-43b4-f3a1-b9d0a3ae04a5"
       },
       "outputs": [
         {
@@ -16,20 +16,22 @@
           "name": "stdout",
           "text": [
             "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
-            "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [1 InRelease 8,192 B/110\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Waiting for headers] [1 InRelease 54.7 kB/110 kB 50%] [2 InRelease 0 B/3,62\r0% [Waiting for headers] [1 InRelease 75.0 kB/110 kB 68%] [Connecting to ppa.la\r                                                                               \rHit:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [1 InRelease 14.2 kB/110\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [1 InRelease 57.6 kB/110\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [1 InRelease 110 kB/110 \r0% [Waiting for headers] [Connecting to ppa.launchpadcontent.net (185.125.190.5\r                                                                               \rHit:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to ppa.launchpadcontent.net (185.125.190.5\r                                                                               \rHit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
             "Get:5 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
             "Hit:6 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Get:7 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [860 kB]\n",
-            "Get:8 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [983 kB]\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [109 kB]\n",
-            "Hit:10 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Get:7 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [986 kB]\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [109 kB]\n",
+            "Get:9 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [864 kB]\n",
+            "Get:10 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease [18.1 kB]\n",
             "Hit:11 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,247 kB]\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,251 kB]\n",
             "Hit:13 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [1,136 kB]\n",
-            "Fetched 4,568 kB in 2s (2,049 kB/s)\n",
+            "Get:14 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [1,173 kB]\n",
+            "Get:15 http://archive.ubuntu.com/ubuntu jammy-updates/restricted amd64 Packages [981 kB]\n",
+            "Get:16 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 Packages [21.8 kB]\n",
+            "Fetched 5,637 kB in 2s (2,788 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -60,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -76,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "wOJqxG_RPSwp"
       },
@@ -100,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nd9oCy2qRNqh",
-        "outputId": "f3c75594-1676-4003-8f1e-b4a5c1078348"
+        "outputId": "9ff53aa6-12d5-4199-bdbf-c79086f69ae0"
       },
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "RoljcJ7WPpnm"
       },
@@ -159,13 +161,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 7,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16ac6a29-ce92-4c64-ce5a-c42703201597"
+        "outputId": "92a3e95f-2ca3-4c8d-c341-6e7ffa522229"
       },
       "outputs": [
         {
@@ -175,10 +177,10 @@
             "+----+---------+\n",
             "|year| avgPrice|\n",
             "+----+---------+\n",
-            "|2019|315782.18|\n",
-            "|2020|315949.81|\n",
-            "|2021|313218.09|\n",
-            "|2022|314421.54|\n",
+            "|2019| 300263.7|\n",
+            "|2020|298353.78|\n",
+            "|2021|301819.44|\n",
+            "|2022|296363.88|\n",
             "+----+---------+\n",
             "\n"
           ]
@@ -187,18 +189,18 @@
       "source": [
         "# 3. What is the average price for a four bedroom house sold in each year rounded to two decimal places?\n",
         "\n",
-        "spark.sql(\"SELECT year(date) as year, ROUND(AVG(price),2) as avgPrice FROM homes GROUP BY year(date) ORdER BY year(date) \").show()"
+        "spark.sql(\"SELECT year(date) as year, ROUND(AVG(price),2) as avgPrice FROM homes WHERE bedrooms = 4 GROUP BY year(date) ORdER BY year(date) \").show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bf2da4df-e1bb-4d1f-b58e-fca7d89001d5"
+        "outputId": "cb4cb40e-3ba8-4f3e-b34c-ed1aed7d84c2"
       },
       "outputs": [
         {
@@ -228,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
@@ -271,13 +273,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "3a1486ae-0d26-4ee0-e0ff-dafab8d5dfd1"
+        "outputId": "815085d7-31a6-4592-9da9-650962a7f379"
       },
       "outputs": [
         {
@@ -287,30 +289,30 @@
             "+----+---------+\n",
             "|view| avgPrice|\n",
             "+----+---------+\n",
-            "| 100|1026669.5|\n",
-            "|  51|788128.21|\n",
-            "|  52|733780.26|\n",
-            "|  53| 755214.8|\n",
-            "|  54|798684.82|\n",
-            "|  55|771153.32|\n",
-            "|  56| 718176.4|\n",
-            "|  57| 734340.5|\n",
-            "|  58|759764.65|\n",
-            "|  59| 791453.0|\n",
-            "|  60|754939.65|\n",
-            "|  61|746877.59|\n",
-            "|  62|759150.14|\n",
-            "|  63|711614.55|\n",
-            "|  64|767036.67|\n",
-            "|  65|736679.93|\n",
-            "|  66| 712475.0|\n",
-            "|  67|737970.96|\n",
-            "|  68|716785.44|\n",
-            "|  69|750537.94|\n",
+            "|  51| 941325.5|\n",
+            "|  52| 695340.2|\n",
+            "|  53|707775.67|\n",
+            "|  54|615620.67|\n",
+            "|  55| 646483.5|\n",
+            "|  56|765858.75|\n",
+            "|  58| 863086.6|\n",
+            "|  59| 774673.0|\n",
+            "|  60|780180.33|\n",
+            "|  61|724529.33|\n",
+            "|  62| 747635.0|\n",
+            "|  63| 747545.5|\n",
+            "|  64| 792500.0|\n",
+            "|  65| 665755.0|\n",
+            "|  66|571270.67|\n",
+            "|  68| 574888.0|\n",
+            "|  69| 574301.0|\n",
+            "|  70| 577965.0|\n",
+            "|  71|817032.67|\n",
+            "|  72| 788178.0|\n",
             "+----+---------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 1.2052783966064453 seconds ---\n"
+            "--- 1.5750036239624023 seconds ---\n"
           ]
         }
       ],
@@ -322,6 +324,8 @@
         "spark.sql(\"\"\"\n",
         "SELECT view, ROUND(AVG(price),2) as avgPrice\n",
         "FROM homes\n",
+        "WHERE bedrooms = 3\n",
+        "AND bathrooms = 3\n",
         "GROUP BY view\n",
         "HAVING AVG(price) >= 350000\n",
         "ORDER BY view\n",
@@ -333,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
@@ -360,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
@@ -387,7 +391,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -449,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -461,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -473,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -485,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -548,7 +552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
@@ -575,7 +579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
@@ -603,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Si-BNruRUGK3"
       },
